[package]
name = "rmq"
version = "0.1.0"
authors = ["Elias.Yao <siran0611@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log="0.4"
env_logger="0.7"
serde="1.0"
serde_json="1.0"
serde_derive = "1.0"
rand="0.7"
bitflags="1.0"
lazy_static="1.0"
get_if_addrs="0.5"
futures = { version = "0.3.0", features = ["async-await"] }
lru="0.4"
tokio = { version = "0.3", features = ["full"] }

[dev-dependencies]
futures = { version = "0.3.0", features = ["async-await"] }